third level enemies added

--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Test game</title>
+    <title>Who wants to be a programmer</title>
     <link href="CSS/Style.css" rel="stylesheet" />
     <link href="CSS/animate.css" rel="stylesheet" />
     <script src="Script/jquery-2.1.1.min.js"></script>
